some changes to the calendar

--- a/collapsiblecalendarview/src/main/res/layout/layout_day_of_week.xml
+++ b/collapsiblecalendarview/src/main/res/layout/layout_day_of_week.xml
@@ -5,7 +5,6 @@
     android:id="@+id/txt_day_of_week"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:textAlignment="center"
-    android:textSize="14sp"
-    android:textColor="#FF888888"
+    android:layout_gravity="center"
+    android:textSize="13sp"
     tools:text="M" />
