--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@android:color/white">
 
     <com.shrikanthravi.collapsiblecalendarview.widget.CollapsibleCalendar
         android:id="@+id/collapsibleCalendarView"
@@ -13,7 +14,7 @@
         android:layout_height="wrap_content"
         app:primaryColor="#ffffff"
         app:textColor="#000000"
-        app:selectedItem_textColor="#ffffff"
+        app:selectedItem_textColor="@color/colorPrimary"
         app:todayItem_textColor="@android:color/black"
         app:selectedItem_background="@drawable/selected_bg"
         app:buttonLeft_drawableTintColor="#000000"
