--- a/collapsiblecalendarview/src/main/res/drawable/selected_bg.xml
+++ b/collapsiblecalendarview/src/main/res/drawable/selected_bg.xml
@@ -6,8 +6,9 @@
         <shape
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:shape="oval">
-            <solid android:color="#bc34dd" />
+            android:shape="rectangle">
+            <solid
+                android:color="#3f3f51b5"/>
 
         </shape>
 
