--- a/collapsiblecalendarview/src/main/res/layout/day_layout.xml
+++ b/collapsiblecalendarview/src/main/res/layout/day_layout.xml
@@ -1,37 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/linearLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center">
 
-    <TextView
-        android:id="@+id/txt_day"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:id="@+id/day_item"
         android:layout_height="wrap_content"
-        android:background="@android:color/transparent"
-        android:gravity="center"
-        android:layout_marginTop="8dp"
-        android:padding="8dp"
-        android:minEms="2"
-        android:textColor="@android:color/black"
-        android:textSize="13sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="12"/>
+        android:layout_width="wrap_content"
+        android:layout_gravity="center"
+        android:gravity="center">
 
+        <TextView
+            android:id="@+id/txt_day"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:minEms="2"
+            android:layout_marginBottom="8dp"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
+            android:textSize="13sp"
+            tools:text="12"/>
 
-    <ImageView
-        android:id="@+id/img_event_tag"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:src="@drawable/dot_icon"
-        android:visibility="gone"
-        app:layout_constraintEnd_toEndOf="@+id/txt_day"
-        tools:visibility="visible" />
+        <ImageView
+            android:id="@+id/img_event_tag"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:src="@drawable/dot_icon"
+            android:visibility="invisible"
+            android:layout_below="@id/txt_day"
+            android:layout_centerInParent="true"
+            tools:visibility="visible" />
 
+    </RelativeLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
