--- a/collapsiblecalendarview/src/main/res/layout/widget_collapsible_calendarview.xml
+++ b/collapsiblecalendarview/src/main/res/layout/widget_collapsible_calendarview.xml
@@ -9,70 +9,14 @@
     android:orientation="vertical"
     android:background="@android:color/white">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/txt_title"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp">
-
-        <RelativeLayout
-            android:id="@+id/layout_btn_group_month"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true">
-
-            <ImageView
-                android:id="@+id/btn_prev_month"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:src="@drawable/left_icon" />
-
-            <ImageView
-                android:id="@+id/btn_next_month"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true"
-                android:src="@drawable/right_icon" />
-
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/layout_btn_group_week"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true">
-
-            <ImageView
-                android:id="@+id/btn_prev_week"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:src="@drawable/left_icon" />
-
-            <ImageView
-                android:id="@+id/btn_next_week"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true"
-                android:src="@drawable/right_icon" />
-
-        </RelativeLayout>
-
-        <TextView
-            android:id="@+id/txt_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:textColor="@android:color/black"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            tools:text="February 2017" />
-
-    </RelativeLayout>
+        android:layout_gravity="center"
+        android:textColor="@android:color/black"
+        android:textSize="21sp"
+        tools:text="February 2017" />
 
     <TableLayout
         android:id="@+id/table_head"
@@ -95,7 +39,5 @@
         </TableLayout>
 
     </com.shrikanthravi.collapsiblecalendarview.view.LockScrollView>
-
-
 
 </LinearLayout>
