--- a/materialcalendarview/src/main/res/drawable/selected_day_bg.xml
+++ b/materialcalendarview/src/main/res/drawable/selected_day_bg.xml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list
-    xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <item>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:state_pressed="true">
         <shape
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:shape="rectangle">
             <solid
-                android:color="#3f3f51b5"/>
+                android:color="#3f3F51B5"/>
 
         </shape>
-
     </item>
-</layer-list>
+
+</selector>
