removed deadwood attributes/methods and rounded out color settings methods

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,9 @@
     <com.applandeo.materialcalendarview.CalendarView
         android:id="@+id/calendarView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        app:selectionColor="@color/colorPrimary"
+        app:todayColor="@color/colorAccent"/>
+
 
 </RelativeLayout>
