--- a/materialcalendarview/src/main/res/drawable-v21/selected_day_bg.xml
+++ b/materialcalendarview/src/main/res/drawable-v21/selected_day_bg.xml
@@ -1,13 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="true">
-        <shape
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:shape="rectangle">
-            <solid
-                android:color="#3f3F51B5"/>
-
-        </shape>
-    </item>
+    <item android:state_pressed="true" android:drawable="@drawable/selected_day_bg_shape"/>
 </selector>
