--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#D81B60</color>
 
-    <color name="colorFun">#bD3B11</color>
+    <color name="colorFun">#1Dba1f</color>
     <color name="colorTest">#f4fB11</color>
 
 </resources>
