--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,6 @@
 
     <color name="colorFun">#1Dba1f</color>
     <color name="colorTest">#f4fB11</color>
+    <color name="colorZest">#FF19B8</color>
 
 </resources>
