--- a/materialcalendarview/src/main/res/drawable-v21/selected_event_day_bg_shape.xml
+++ b/materialcalendarview/src/main/res/drawable-v21/selected_event_day_bg_shape.xml
@@ -9,6 +9,9 @@
             <solid
                 android:color="#45bb3511"/>
 
+            <stroke
+                android:width="2dp"
+                android:color="#bb3511"/>
         </shape>
 
     </item>
