action bar and selector change

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:selectionColor="@color/colorPrimary"
-        app:todayColor="@color/colorZest"
+        app:todayColor="@color/colorPrimaryDark"
         app:eventDayColor="@color/colorZest"/>
 
 
