--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="colorAccent">#D81B60</color>
 
     <color name="colorFun">#1Dba1f</color>
-    <color name="colorTest">#f4fB11</color>
+    <color name="colorTest">#c90707</color>
     <color name="colorZest">#FF19B8</color>
 
 </resources>
